refactor goa errors
